infra/k8s/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: backend
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:18.0.0
          args: ["start-dev"]
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-srv
  namespace: backend
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: keycloak
  type: LoadBalancer
#apiVersion: v1
#kind: Service
#metadata:
#  name: keycloak-srv
#  namespace: backend
#spec:
#  selector:
#    app: keycloak
#  ports:
#    - name: keycloak
#      protocol: TCP
#      port: 3000
#      targetPort: 3000
